# ASCII_Tetris

./: Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  GameInfo.cpp  GameInfo.h  GameOver.cpp  GameOver.h  Leaderboard.cpp  Leaderboard.h  Line.cpp  Line.h  MainMenu.cpp  MainMenu.h  README.md  Square.cpp  Square.h  Startup_page.cpp  Startup_page.h  Tetramino.cpp  Tetramino.h  main.cpp  relazione tetris.docx
shapes/: LLshape.cpp  LLshape.h  Line.cpp  Line.h  RLshape.cpp  RLshape.h  SLshape.cpp  SLshape.h  SRshape.cpp  SRshape.h  Square.cpp  Square.h  TShape.cpp  TShape.h
